# KonsanNet

./: CMakeLists.txt  LICENSE  README.md  linux_run.sh  main.cpp  window_build.cmd
CXCommon/: CMakeLists.txt
CXCommon/include/: CXCommonPacketStructure.h  CXDataParserImpl.h  CXErrorCode.h  CXFilePacketStructure.h  CXGuidObject.h  CXPacketCodeDefine.h  CXRPCReply.h  CXRPCRequest.h  CXSessionPacketStructure.h  PlatformDataTypeDefine.h  PlatformFunctionDefine.h  SocketDefine.h
CXCommon/src/: CXGuidObject.cpp  CXRPCReply.cpp  CXRPCRequest.cpp  PlatformFunctionDefine.cpp
CXCommunicationClient/: CMakeLists.txt  main.cpp
CXCommunicationClient/include/: CXClientConnectionSession.h  CXClientSocketChannel.h  CXFileTcpClient.h  CXFileTcpClientTest.h  CXRPCObjectClient.h  CXTcpClient.h
CXCommunicationClient/src/: CXClientConnectionSession.cpp  CXClientSocketChannel.cpp  CXFileTcpClient.cpp  CXFileTcpClientTest.cpp  CXRPCObjectClient.cpp  CXTcpClient.cpp
CXCommunicationClientTest/: CMakeLists.txt  main.cpp
CXCommunicationClientTest/include/: CXFileTcpClientTest.h
CXCommunicationClientTest/src/: CXFileTcpClientTest.cpp
CXCommunicationServer/: CMakeLists.txt  main.cpp  makefile
CXCommunicationServer/include/: CXCommunicationServer.h  CXComunicationUser.h  CXConnectionObject.b  CXConnectionObject.h  CXConnectionSession.h  CXConnectionsManager.h  CXDataDispathLevelImpl.h  CXDataParserImpl.h  CXGuidGenerate.h  CXIOStat.h  CXMessageProcessLevelBase.h  CXMessageQueue.h  CXRPCObjectClientInServer.h  CXRPCObjectManager.h  CXRPCObjectServer.h  CXServerConfig.h  CXServerStructDefine.h  CXSessionLevelBase.h  CXSessionMessageProcess.h  CXSessionsManager.h  CXSocketServerImpl.h  CXSocketServerKernel.h  CXTaskCreateConnection.h  CXTaskParseMessage.h  CXTaskPrepareMessage.h  CXUnknownRPCObject.h  CXUserMessageProcess.h  CXUserMessageProcessBase.h
CXCommunicationServer/src/: CXCommunicationServer.cpp  CXComunicationUser.cpp  CXConnectionObject.cpp  CXConnectionSession.cpp  CXConnectionsManager.cpp  CXDataDispathLevelImpl.cpp  CXDataParserImpl.cpp  CXGuidGenerate.cpp  CXIOStat.cpp  CXMessageProcessLevelBase.cpp  CXMessageQueue.cpp  CXRPCObjectClientInServer.cpp  CXRPCObjectManager.cpp  CXRPCObjectServer.cpp  CXServerConfig.cpp  CXSessionLevelBase.cpp  CXSessionMessageProcess.cpp  CXSessionsManager.cpp  CXSocketServerImpl.cpp  CXSocketServerKernel.cpp  CXTaskCreateConnection.cpp  CXTaskParseMessage.cpp  CXTaskPrepareMessage.cpp  CXUnknownRPCObject.cpp  CXUserMessageProcess.cpp  CXUserMessageProcessBase.cpp
CXCommunicationServerTest/: CMakeLists.txt  main.cpp
CXCommunicationServerTest/include/: CXAdvancedSessionMessageProcessHandle.h  CXFastDataParserHandle.h  CXFileMessageProcessHandle.h  CXFileRPCServer.h  CXSessionLoginRPCServer.h  CXStorageRPCServer.h
CXCommunicationServerTest/src/: CXAdvancedSessionMessageProcessHandle.cpp  CXFastDataParserHandle.cpp  CXFileMessageProcessHandle.cpp  CXFileRPCServer.cpp  CXSessionLoginRPCServer.cpp  CXStorageRPCServer.cpp
CXContainer/: CMakeLists.txt  CMakeLists_exe.txt  main.cpp
CXContainer/include/: CXList.h  CXQueue.h  CXQueueData.h
CXContainer/src/: CXList.cpp  CXQueue.cpp  CXQueueData.cpp
CXDataParser/: CMakeLists.txt
CXDataParser/include/: CXDataParserImpl.h  CXFastDataParserHandle.h
CXDataParser/src/: CXDataParserImpl.cpp  CXFastDataParserHandle.cpp
CXEvent/: CMakeLists.txt
CXEvent/include/: CXEvent.h
CXEvent/lib/Debug/: CXEvent.ilk  CXEvent_static.lib
CXEvent/src/: CXEvent.cpp
CXFile/: CMakeLists.txt  test.cpp
CXFile/include/: CXFile64.h
CXFile/src/: CXFile64.cpp
CXLock/: CMakeLists.txt
CXLock/include/: CXMutexLock.h  CXSpinLock.h
CXLock/include/linux/: spinlock-xchg.h
CXLock/src/: CXMutexLock.cpp  CXSpinLock.cpp  main.cpp
CXLog/: CMakeLists.txt
CXLog/include/: CXLog.h
CXLog/src/: CXLog.cpp
CXMemoryCache/: CMakeLists.txt  main.cpp
CXMemoryCache/include/: CXElasticMemoryCache.h  CXMemoryCache.h  CXMemoryCacheManager.h
CXMemoryCache/src/: CXElasticMemoryCache.cpp  CXMemoryCache.cpp  CXMemoryCacheManager.cpp
CXProxyServerTest/: CMakeLists.txt  main.cpp
CXProxyServerTest/include/: CXFileRPCProxyServer.h  CXStorageRPCClient.h
CXProxyServerTest/src/: CXFileRPCProxyServer.cpp  CXStorageRPCClient.cpp
CXSocketWrapper/: CMakeLists.txt
CXSocketWrapper/include/: CXNetworkInitEnv.h  CXSocketAddress.h  CXSocketImpl.h  SocketDefine.h
CXSocketWrapper/lib/Debug/: CXSocketWrapper.ilk  CXSocketWrapper_static.lib
CXSocketWrapper/src/: CXNetworkInitEnv.cpp  CXSocketAddress.cpp  CXSocketImpl.cpp
CXTask/: CMakeLists.txt
CXTask/include/: CXTaskBase.h  CXTaskPool.h
CXTask/src/: CXTaskBase.cpp  CXTaskPool.cpp
CXTestSample/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
CXTestSample/include/: CCryptoppTest.h  CFile64Test.h  COpenSSLTest.h  CThreadPoolTest.h  CUnitTestBase.h
CXTestSample/src/: CCryptoppTest.cpp  CFile64Test.cpp  COpenSSLTest.cpp  CThreadPoolTest.cpp  CUnitTestBase.cpp
CXThread/: CMakeLists.txt
CXThread/include/: CXThread.h  CXThreadPool.h
CXThread/src/: CXThread.cpp  CXThreadPool.cpp
doc/: CXCommunicationFramework概要设计文档.doc
third_libs/i386/windows/debug/: snappy.lib
third_libs/i386/windows/release/: snappy.lib
